--- a/templates/partials/modal.html.twig
+++ b/templates/partials/modal.html.twig
@@ -20,7 +20,7 @@
             <div class="modal-footer" style="justify-content:space-between">
                 {% block footer %}
                     <button type="submit" class="{{ submitButtonClass }}">{{ submitButtonText }}</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">{{ cancelButtonText }}</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{{ cancelButtonText }}</button>
                 {% endblock %}
             </div>
             {{ form_end(form) }}
