--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -342,3 +342,38 @@ footer {
   }
 }
 
+#beeriously-brewery-settings-brewers-list ul li
+{
+  display: flex;
+  /*flex-direction: row;*/
+  justify-content: space-between;
+  /*align-items: stretch;*/
+
+  .beeriously-brewery-settings-brewers-controls {
+    align-self: flex-end;
+  }
+
+  .beeriously-brewery-settings-brewers-details {
+    padding-left: 15px;
+    flex-grow: 1;
+  }
+
+  h5 {
+    margin: 0;
+  }
+
+  p {
+    margin: 0;
+    padding: 5px 0;
+    line-height: 1em;
+  }
+
+  img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+
+
+}
+
