wip: registration email

--- a/templates/bundles/FOSUserBundle/Registration/email.txt.twig
+++ b/templates/bundles/FOSUserBundle/Registration/email.txt.twig
@@ -1,15 +1,17 @@
+{% block body_html %}
+{% include('@FOSUser/Registration/email-contents.html.twig') %}
+{% endblock %}
 {% block subject %}
 {%- autoescape false -%}
 {{ 'beeriously.brewer.registration.email.subject'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}) }}
 {%- endautoescape -%}
 {% endblock %}
-
 {% block body_text %}
 {% autoescape false %}
-{{ 'beeriously.brewer.registration.email.message'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}) }}
+{{ 'beeriously.brewer.registration.email.message_alt_text'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}) }}
 
 ---
 {{ 'beeriously.email.signature' | trans }}
 {% endautoescape %}
 {% endblock %}
-{% block body_html %}{% endblock %}
+
