wip: refactor mail contents to template

--- a/templates/bundles/FOSUserBundle/Registration/email-contents.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/email-contents.html.twig
@@ -1,185 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>{{ 'beeriously.brewer.registration.email.subject'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}) }}</title>
-    <style type="text/css">
-        body {
-            width: 100% !important;
-        }
-
-        .ReadMsgBody {
-            width: 100%;
-        }
-
-        .ExternalClass {
-            width: 100%;
-        }
-
-        /* Force Hotmail to display emails at full width */
-        body {
-            -webkit-text-size-adjust: none;
-        }
-
-        /* Prevent Webkit platforms from changing default text sizes. */
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        img {
-            border: 0;
-            height: auto;
-            line-height: 100%;
-            outline: none;
-            text-decoration: none;
-        }
-
-        table td {
-            border-collapse: collapse;
-        }
-
-        #backgroundTable {
-            height: 100% !important;
-            margin: 0;
-            padding: 0;
-            width: 100% !important;
-        }
-
-        body, #templateHeader, #templateFooter, #headerContent {
-            background-color: #e7e7e7;
-        }
-
-        #templateHeader {
-            padding: 20px;
-        }
-
-        #templateFooter {
-        }
-
-        #templateContainer {
-            background: #FFFFFF;
-        }
-
-        #templateFooter {
-
-        }
-
-        .bodyContent {
-            padding-top:10px;
-            padding-bottom: 20px;
-            padding-left: 20px;
-            padding-right: 20px;
-            border-bottom: 5px solid #dddddd;
-            font-family: Helvetica, Arial, sans-serif;
-        }
-
-        .footerContent p {
-            text-align: center;
-            font-family: Helvetica, Arial, sans-serif;
-        }
-
-        #headerContent {
-            color: #000000;
-            font-family: Helvetica, Arial, sans-serif;
-            font-size: 30px;
-            font-weight: bold;
-            line-height: 100%;
-            padding-top: 5px;
-            padding-left: 5px;
-            padding-right: 5px;
-            padding-bottom: 5px;
-            text-align: center;
-            vertical-align: middle;
-        }
-
-        #headerContent a, #headerContent a:visited {
-            color: #000000;
-            text-decoration: none;
-        }
-
-        #headerContentImage {
-            vertical-align: middle;
-        }
-
-        #emailSignature {
-            color: #999999;
-        }
-
-    </style>
-</head>
-<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0">
-<center>
-    <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="backgroundTable">
-        <tr>
-            <td align="center" valign="top">
-                <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateContainer">
-                    <tr>
-                        <td align="center" valign="top">
-                            <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateHeader">
-                                <tr>
-                                    <td id="headerContent">
-                                        <a href="{{ app.request.getSchemeAndHttpHost() }}"><img id="headerContentImage" style="height: 50px;" src="{{ app.request.getSchemeAndHttpHost() }}/assets/img/logo/beeriously-logo-square-email-light-header.jpg"> {{ 'beeriously.global.app_name' | trans }}</a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="top">
-                            <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody">
-                                <tr>
-                                    <td valign="top" class="bodyContent">
-                                        <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                                            <tr>
-                                                <td valign="top">
-                                                    <p>{{ 'beeriously.brewer.registration.email.salutation'|trans({'%username%': user.username}) }}</p>
-                                                    <p>{{ 'beeriously.brewer.registration.email.message' | trans }}</p>
-                                                    {% include('partials/email/button.html.twig') with { button_text : 'beeriously.brewer.registration.email.button_text' | trans, url : confirmationUrl, button_color: '#007bff', button_border_color: '#026ee2'} %}
-                                                    <br><br>
-                                                    <p id="emailSignature">---<br>{{ 'beeriously.email.signature' | trans | nl2br }}</p>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="top">
-                            <table border="0" cellpadding="10" cellspacing="0" width="600" id="templateFooter">
-                                <tr>
-                                    <td valign="top" class="footerContent">
-                                        <table border="0" cellpadding="10" cellspacing="0" width="100%">
-                                            <tr>
-                                                <td colspan="2" valign="middle">
-                                                    {{ include('partials/footer.html.twig') }}
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                </table>
-                <br/>
-            </td>
-        </tr>
-    </table>
-</center>
-</body>
-
-{#<body>#}
-{#<center>#}
-{#<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">#}
-{#</table>#}
-{#</center>#}
-{#<img style="height: 50px;" alt="Beeriously Brewing Software" src="{{ app.request.getSchemeAndHttpHost() }}/assets/img/logo/beeriously-logo-square-150-on-white.jpg">#}
-{#<br><br>#}
-{#<p class="p">{{ 'beeriously.brewer.registration.email.subject'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}) }}</p>#}
-{#<p></p>#}
-</body>
-</html>
+{% extends 'partials/email/transactional-email.html.twig' %}
+{% set email_subject =  'beeriously.brewer.registration.email.subject'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}) %}
+{% block email_content %}
+    <p>{{ 'beeriously.brewer.registration.email.salutation'|trans({'%username%': user.username}) }}</p>
+    <p>{{ 'beeriously.brewer.registration.email.message' | trans }}</p>
+    {% include('partials/email/button.html.twig') with { button_text : 'beeriously.brewer.registration.email.button_text' | trans, url : confirmationUrl, button_color: '#007bff', button_border_color: '#026ee2'} %}
+{% endblock %}
