--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -1,5 +1,4 @@
-{% trans_default_domain 'FOSUserBundle' %}
-<h1>{{ 'layout.login'|trans }}</h1>
+<h1>{{ 'beeriously.security.login_title'|trans }}</h1>
 
 {% if error %}
     <div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
