--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/open-sans.css">
+    <link rel="stylesheet" href="/assets/css/beeriously-docs.css">
     <link rel="shortcut icon" href="/assets/img/logo/favicon.png" type="image/png" />
-    <title>Beeriously</title>
+    <title>{{ page.title }}</title>
 </head>
 <body>
-
+<div id="beeriously-cookie-accept" class="pt-2 pb-2" style="display: none">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-11">
+                <div>By browsing our website, you consent to our use of cookies and other tracking technologies to improve your experience on our website, and to analyze our website traffic. Oreo cookies are an acceptable beer ingredient as this site is not Reinheitsgebot.</div>
+            </div>
+            <div class="col-sm-1">
+                <button class="btn btn-sm btn-warning">OK</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--<nav class="navbar navbar-expand-lg navbar-light">-->
+    <!--<div class="container">-->
+        <!--<a class="navbar-brand" href="/">-->
+            <!--<img style="height: 60px;" src="/assets/img/logo/beeriously-logo-square.png">-->
+        <!--</a>-->
+        <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#beeriosuly-docs-nav" aria-controls="beeriosuly-docs-nav" aria-expanded="false" aria-label="Toggle navigation">-->
+            <!--<span class="navbar-toggler-icon"></span>-->
+        <!--</button>-->
+        <!--<div class="collapse navbar-collapse" id="beeriosuly-docs-nav">-->
+            <!--<ul class="navbar-nav justify-content-end w-100">-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" href="#">Features</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" href="#">Pricing</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item" style="margin-left: auto">-->
+                    <!--<a class="btn btn-primary" href="https://app.beeriously.com">Login</a>-->
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</nav>-->
