--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -44,6 +44,7 @@ Beeriously.messages['beeriously.ajax.default_error_message'] = "{{ 'beeriously.a
                     </div>
                     <ul id="beeriously-nav-menu-profile-details">
                         <li>{{ app.user.getFullName }}<br>({{ app.user.getUsername }})</li>
+                        <li>{{ app.user.getBrewery.getName }}</li>
                         <li><a href="{{ path('fos_user_profile_show') }}">{{ 'beeriously.layout.profile'|trans }}</a> &bull; <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
                     </ul>
                 </div>
