--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,6 +1,6 @@
 <footer>
     <p><i class="fa fa-copyright"></i> Copyright {{ null | date('Y') }} <a href="https://www.andrewcassell.com">Andrew Cassell</a></p>
     <p>
-        <a href="https://github.com/cassell/beeriously">GitHub Project</a> &bull; <a href="https://github.com/cassell/beeriously/issues">Issues</a> &bull; <a href="https://github.com/cassell/beeriously/blob/master/README.md">Docs</a> &bull; <a href="https://github.com/cassell/beeriously/blob/master/CREDITS.md">Credits</a>
+        <a href="https://www.beeriously.com">Website</a> &bull; <a href="https://github.com/cassell/beeriously">GitHub Project</a> &bull; <a href="https://github.com/cassell/beeriously/issues">Issues</a> &bull; <a href="https://github.com/cassell/beeriously/blob/master/CREDITS.md">Credits</a>
     </p>
 </footer>
