--- a/templates/brewery/details/measurements.html.twig
+++ b/templates/brewery/details/measurements.html.twig
@@ -13,11 +13,11 @@
                 <td>{{ app.user.brewery.getTemperaturePreferenceUnits.getTranslationDescriptionIdentifier | trans }}</td>
                 {#<td><button type="button" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> {{ 'beeriously.global.edit' | trans }}</button></td>#}
             </tr>
-            <tr>
-                <th>{{ 'beeriously.measurements.mass_volume.description' | trans }}</th>
+            {#<tr>#}
+                {#<th>{{ 'beeriously.measurements.mass_volume.description' | trans }}</th>#}
                 {#<td>{{ app.user.brewery.getMassVolumePreferenceUnits.getTranslationDescriptionIdentifier | trans }}</td>#}
                 {#<td><button type="button" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> {{ 'beeriously.global.edit' | trans }}</button></td>#}
-            </tr>
+            {#</tr>#}
         </tbody>
     </table>
 {% endblock %}
