--- a/templates/bundles/FOSUserBundle/Profile/partial/photo.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/partial/photo.html.twig
@@ -7,6 +7,6 @@
     </div>
     <br>
     <div>
-        <a href="{{ path('brewer-change-avatar') }}" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> {{ 'beeriously.profile.change_photo'|trans }}</a>
+        <a href="{{ path('brewer-change-avatar') }}" class="btn btn-default btn-sm" data-turbolinks="false"><i class="fa fa-edit"></i> {{ 'beeriously.profile.change_photo'|trans }}</a>
     </div>
 {% endblock %}
