--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -18,9 +18,9 @@
         {% block footer %}
         <div class="beeriously-security-footer">
             <ul>
-                <li><a href="{{ path('fos_user_registration_register') }}">{{ 'beeriously.security.register.need_account'|trans }}</a></li>
-                <li><a href="{{ path('fos_user_resetting_request') }}">{{ 'beeriously.security.forgot.password'|trans }}</a></li>
-                <li><a href="{{ path('beeriously_choose_language') }}">{{ 'beeriously.security.register.switch_language'|trans }} (🇺🇸🇬🇧🇩🇪)</a></li>
+                <li><a href="{{ path('fos_user_registration_register') }}" data-turbolinks="false">{{ 'beeriously.security.register.need_account'|trans }}</a></li>
+                <li><a href="{{ path('fos_user_resetting_request') }}" data-turbolinks="false">{{ 'beeriously.security.forgot.password'|trans }}</a></li>
+                <li><a href="{{ path('beeriously_choose_language') }}" data-turbolinks="false">{{ 'beeriously.security.register.switch_language'|trans }} (🇺🇸🇬🇧🇩🇪)</a></li>
             </ul>
         </div>
         <div class="beeriously-security-footer">
