--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,14 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
-<link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
-<link rel="stylesheet" href="{{ asset('assets/css/open-sans.css') }}">
+<link rel="stylesheet" href="{{ asset('build/css/app.css') }}" data-turbolinks-track="reload">
+<link rel="stylesheet" href="{{ asset('assets/css/open-sans.css') }}" data-turbolinks-track="reload">
 {% endblock %}
 
 {% block javascripts %}
-<script src="{{ asset('build/js/app.js') }}"></script>
+<script src="{{ asset('build/js/app.js') }}" defer data-turbolinks-track="reload"></script>
 <script>
-Beeriously.messages['beeriously.ajax.default_error_message'] = "{{ 'beeriously.ajax.default_error_message'|trans }}";
+document.addEventListener("turbolinks:load", function(event) {
+    Beeriously.messages['beeriously.ajax.default_error_message'] = "{{ 'beeriously.ajax.default_error_message'|trans }}";
+});
 </script>
 {% endblock %}
 
@@ -45,7 +47,7 @@ Beeriously.messages['beeriously.ajax.default_error_message'] = "{{ 'beeriously.a
                     <ul id="beeriously-nav-menu-profile-details">
                         <li>{{ app.user.getFullName }}<br>({{ app.user.getUsername }})</li>
                         <li>{{ app.user.getBrewery.getName }}</li>
-                        <li><a href="{{ path('fos_user_profile_show') }}">{{ 'beeriously.layout.profile'|trans }}</a> &bull; <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
+                        <li><a href="{{ path('fos_user_profile_show') }}">{{ 'beeriously.layout.profile'|trans }}</a> &bull; <a href="{{ path('fos_user_security_logout') }}" data-turbolinks="false">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
                     </ul>
                 </div>
             </div>
